<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="10.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0sp" android:layout_marginBottom="15.0sp" android:src="@drawable/splash" />
        <TextView android:textSize="18.0sp" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_version" />
        <TextView android:textSize="18.0sp" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_copyright" />
        <TextView android:textSize="18.0sp" android:gravity="center" android:autoLink="web" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_website" />
        <TextView android:textSize="18.0sp" android:gravity="center" android:autoLink="web" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_facebook" />
        <Button android:textSize="16.0sp" android:textColor="#ff000000" android:layout_gravity="center" android:id="@id/market_button" android:layout_width="wrap_content" android:layout_height="45.0sp" android:layout_margin="20.0sp" android:text="@string/button_market" />
        <TextView android:textSize="16.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0sp" android:text="@string/disclaimer" />
        <TextView android:textSize="16.0sp" android:textColor="#ffc80000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0sp" android:text="@string/safety" />
        <TextView android:textSize="16.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0sp" android:text="@string/acknowledgement" />
    </LinearLayout>
</ScrollView>