<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="10.0sp" android:layout_marginRight="10.0sp" android:layout_marginBottom="5.0sp">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon" />
        <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="#ff00137f" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:text="@string/help_caption" />
    </LinearLayout>
    <TextView android:gravity="left" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="2.0sp" android:text="" />
    <ScrollView android:background="#ffffe7c1" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="10.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff00137f" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_title001" />
            <TextView android:textSize="14.0sp" android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginRight="10.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_text001" />
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff00137f" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_title002" />
            <TextView android:textSize="14.0sp" android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginRight="10.0sp" android:layout_marginBottom="15.0sp" android:text="@string/help_text002" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0sp" android:layout_marginTop="0.0sp" android:layout_marginRight="10.0sp" android:layout_marginBottom="5.0sp">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/help006" />
                <TextView android:textSize="14.0sp" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0sp" android:text="点击此按钮来选择卫星信号视图" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0sp" android:layout_marginTop="0.0sp" android:layout_marginRight="10.0sp" android:layout_marginBottom="5.0sp">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/help007" />
                <TextView android:textSize="14.0sp" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0sp" android:text="点击此按钮来选择位置的卫星视图" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0sp" android:layout_marginTop="0.0sp" android:layout_marginRight="10.0sp" android:layout_marginBottom="5.0sp">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/help008" />
                <TextView android:textSize="14.0sp" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0sp" android:text="点击此按钮选择位置视图" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0sp" android:layout_marginTop="0.0sp" android:layout_marginRight="10.0sp" android:layout_marginBottom="5.0sp">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/help009" />
                <TextView android:textSize="14.0sp" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0sp" android:text="点击此按钮可以选择快速视图" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0sp" android:layout_marginTop="0.0sp" android:layout_marginRight="10.0sp" android:layout_marginBottom="15.0sp">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/help010" />
                <TextView android:textSize="14.0sp" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0sp" android:text="点击此按钮选择视图" />
            </LinearLayout>
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff00137f" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:text="@string/help_title003" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:src="@drawable/help001" />
                <TextView android:textSize="14.0sp" android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_text003" />
            </LinearLayout>
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff00137f" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:text="@string/help_title004" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:src="@drawable/help002" />
                <TextView android:textSize="14.0sp" android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_text004" />
            </LinearLayout>
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff00137f" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:text="@string/help_title005" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:src="@drawable/help003" />
                <TextView android:textSize="14.0sp" android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_text005" />
            </LinearLayout>
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff00137f" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:text="@string/help_title006" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:src="@drawable/help004" />
                <TextView android:textSize="14.0sp" android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_text006" />
            </LinearLayout>
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff00137f" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:text="@string/help_title007" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:src="@drawable/help011" />
                <TextView android:textSize="14.0sp" android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_text007" />
            </LinearLayout>
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff00137f" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:text="@string/help_title008" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="15.0sp" android:src="@drawable/help005" />
                <TextView android:textSize="14.0sp" android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_text008" />
            </LinearLayout>
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff00137f" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0sp" android:layout_marginTop="0.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_title009" />
            <TextView android:textSize="14.0sp" android:gravity="top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0sp" android:layout_marginTop="0.0sp" android:layout_marginRight="10.0sp" android:layout_marginBottom="10.0sp" android:text="@string/help_text009" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>